05_squares/grade.txt
Grading at Fri Oct 26 03:00:01 UTC 2018
Trying to compile your code and link with squares_test.o
squares.c:4:5: error: second argument of ‘main’ should be ‘char **’ [-Werror=main]
 int main ( int size1, int x_offset, int y_offset, int size2){ /* squares(int size1, int x_offset, int y_offset, int size2) { */
     ^
squares.c:4:5: error: third argument of ‘main’ should probably be ‘char **’ [-Werror=main]
squares.c:4:5: error: ‘main’ takes only zero or two arguments [-Werror=main]
squares.c: In function ‘main’:
squares.c:6:10: error: implicit declaration of function ‘max’ [-Werror=implicit-function-declaration]
   int w= max(size1, x_offset + size2);
          ^
squares.c:8:14: error: ‘xize1’ undeclared (first use in this function)
   int h= max(xize1, y_offset + size2);
              ^
squares.c:8:14: note: each undeclared identifier is reported only once for each function it appears in
squares.c:12:19: error: ‘x’ undeclared (first use in this function)
     if ((x_offset<x<x_offset &&(y=y_offset||y=y_offset+size2-1))||(y_offset<y<y_offset+size2-1&&(x=x_offset||x=x_offfset+size2-1)){
                   ^
squares.c:12:46: error: lvalue required as left operand of assignment
     if ((x_offset<x<x_offset &&(y=y_offset||y=y_offset+size2-1))||(y_offset<y<y_offset+size2-1&&(x=x_offset||x=x_offfset+size2-1)){
                                              ^
squares.c:12:76: error: comparisons like ‘X<=Y<=Z’ do not have their mathematical meaning [-Werror=parentheses]
     if ((x_offset<x<x_offset &&(y=y_offset||y=y_offset+size2-1))||(y_offset<y<y_offset+size2-1&&(x=x_offset||x=x_offfset+size2-1)){
                                                                            ^
squares.c:12:112: error: ‘x_offfset’ undeclared (first use in this function)
     if ((x_offset<x<x_offset &&(y=y_offset||y=y_offset+size2-1))||(y_offset<y<y_offset+size2-1&&(x=x_offset||x=x_offfset+size2-1)){
                                                                                                                ^
squares.c:12:131: error: expected ‘)’ before ‘{’ token
     if ((x_offset<x<x_offset &&(y=y_offset||y=y_offset+size2-1))||(y_offset<y<y_offset+size2-1&&(x=x_offset||x=x_offfset+size2-1)){
                                                                                                                                   ^
squares.c:37:1: error: expected declaration or statement at end of input
 }
 ^
squares.c:37:1: error: expected declaration or statement at end of input
squares.c:6:7: error: unused variable ‘w’ [-Werror=unused-variable]
   int w= max(size1, x_offset + size2);
       ^
cc1: all warnings being treated as errors
Could not compile your code

Overall Grade: FAILED
